--- a/site/package.json
+++ b/site/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vitepress-starter",
+  "name": "@maitui/docs",
   "version": "1.0.0",
+  "private": true,
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev docs",
