chore: 完善项目配置

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "lint:eslint": "eslint --fix",
+    "lint:eslint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
     "lint:prettier": "prettier --write \"./**/*.{html,vue,ts,js,json,md,less,sass,scss,sty}\"",
     "lint:style": "stylelint \"./**/*.{html,css,less,sass,scss,vue}\" --fix --allow-empty-input"
   },
